--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "litman_logan_chatapp",
+  "name": "litman_l_heroku_test",
   "version": "1.0.0",
-  "description": "social media app",
+  "description": "homework 1",
   "main": "index.js",
   "scripts": {
     "start": "node app"
